<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_book"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/menu_book" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_favourite"
            android:title="@string/menu_favourite" />
        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/ic_baseline_monetization_on_24"
            android:title="@string/menu_premium" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/like"
            android:title="@string/menu_interest" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_baseline_share"
            android:title="@string/menu_invite" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_power_settings_new"
            android:title="@string/menu_logout" />
    </group>
</menu>
