<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_my_book">

    <fragment
        android:id="@+id/nav_my_book"
        android:name="com.huawei.elibri.java.view.fragment.MyBooksFragment"
        android:label="@string/menu_book"
        tools:layout="@layout/frag_all_books">
        <action
            android:id="@+id/action_nav_my_book_to_display_book"
            app:destination="@id/display_book" />
    </fragment>

    <fragment
        android:id="@+id/display_book"
        android:name="com.huawei.elibri.java.view.fragment.DisplayBook"
        android:label="@string/menu_book"
        tools:layout="@layout/fragment_display_book" />

    <fragment
        android:id="@+id/display_bookmark"
        android:name="com.huawei.elibri.java.view.fragment.DisplayBookmark"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_display_bookmark" />
    <fragment
        android:id="@+id/nav_bookmark"
        android:name="com.huawei.elibri.java.view.fragment.BookmarkFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_bookmark">
        <action
            android:id="@+id/action_nav_bookmark_to_display_bookmark"

            app:destination="@id/display_bookmark" />
    </fragment>

    <fragment
        android:id="@+id/nav_premium"
        android:name="com.huawei.elibri.java.view.fragment.PremiumFragment"
        android:label="@string/menu_premium"
        tools:layout="@layout/fragment_premium" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.huawei.elibri.java.view.fragment.InterestFragment"
        android:label="@string/menu_interest"
        tools:layout="@layout/fragment_profile" />
</navigation>
